--- a/next-ecommerce/core/styles/globals.css
+++ b/next-ecommerce/core/styles/globals.css
@@ -1,10 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
+
 html,
-body {
+body, p {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+body, p {
+  font-family: 'Nunito', sans-serif!important;
+}
+
+p {
+  font-size: 0.875rem!important;
+}
+
 /* 
 a {
   color: inherit;
